--- a/bmp.cabal
+++ b/bmp.cabal
@@ -23,7 +23,7 @@ Library
   build-Depends: 
         base                 == 4.*,
         bytestring           == 0.10.*,
-        binary               == 0.6.*
+        binary               >= 0.6 && < 0.8
 
   ghc-options:
         -O2 -Wall -fno-warn-missing-signatures
